--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,9 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "tailwindcss": "^3.x",
+  "postcss": "^8.x",
+  "autoprefixer": "^10.x",
     "vite": "^6.3.5"
   }
 }
