--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "chatappp",
+  "name": "chat-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "npm run start --prefix backend",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run start --prefix backend"
   },
   "keywords": [],
   "author": "",
